k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  # replicas: 2
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: af912/client-friends-club:latest
        resources:
          limits:
            memory: "400Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
  selector:
    app: client
