k8s/interaction-deplt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-depl
spec:
  selector:
    matchLabels:
      app: interaction
  # replicas: 2
  template:
    metadata:
      labels:
        app: interaction
    spec:
      containers:
      - name: interaction
        image: af912/interaction-friends-club:latest
        resources:
          limits:
            memory: "400Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: interaction-srv
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
